# website

./: .gitignore  .travis.yml  Makefile  yst.cabal  yst.hs
Yst/: Build.hs  CSV.hs  Config.hs  Data.hs  Render.hs  Sqlite3.hs  Types.hs  Util.hs  Yaml.hs
toktok/: config.yaml  index.yaml
toktok/data/: repos.yaml
toktok/files/css/: main.css  rust.css  slider-def.css
toktok/src/content/: changelog.md  contributing.md  designs.md  development.md  index.md  index.st  roadmap.md  vision.md
toktok/src/content/design/: offline-messaging.md  testing.md
toktok/templates/: layout.html.st  repo.st
