name:                yst
version:             0.5.1.1
Tested-With:         GHC == 7.8.3
Cabal-version:       >= 1.8
build-type:          Simple
synopsis:            Builds a static website from templates and data in YAML or
                     CSV files.
description:         `yst` is a tool for generating a static website
                     by filling string templates with data taken from
                     YAML text files (or, alternatively, CSV files or 
                     from a Sqlite3 database).
                     This approach combines the speed, security, and
                     ease of deployment of a static website with the
                     flexibility and maintainability of a dynamic site
                     that separates presentation and data.

category:            Text
license:             GPL
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
homepage:            http://github.com/jgm/yst
stability:           experimental
data-files:          README.markdown
                     changelog
                     demo/config.yaml
                     demo/templates/date.st
                     demo/templates/eventgroup.st
                     demo/april_events.st
                     demo/events.st
                     demo/templates/event.st
                     demo/events.yaml
                     demo/index.st
                     demo/index.yaml
                     demo/layout.html.st
                     demo/layout.tex.st
                     demo/room101.txt
                     demo/room203.txt
                     demo/files/js/nav.js
                     demo/files/css/hk-pyg.css
                     demo/files/css/print.css
                     demo/files/css/screen.css

Source-repository    head
  type:              git
  location:          https://github.com/jgm/yst.git

Executable           yst
  hs-source-dirs:    .
  main-is:           yst.hs
  other-modules:
      Paths_yst
    , Yst.Build
    , Yst.CSV
    , Yst.Config
    , Yst.Data
    , Yst.Render
    , Yst.Sqlite3
    , Yst.Types
    , Yst.Util
    , Yst.Yaml
  build-depends:
      base < 5
    , HDBC
    , HDBC-sqlite3
    , HStringTemplate
    , aeson
    , containers
    , csv
    , directory
    , filepath
    , lucid
    , old-locale
    , old-time
    , pandoc
    , parsec
    , scientific
    , split
    , text
    , time
    , unordered-containers
    , yaml
  ghc-options:
    -Wall
    -fno-warn-orphans
